--- a/src/views/partials/header.hbs
+++ b/src/views/partials/header.hbs
@@ -1,15 +1,18 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <link rel="stylesheet" href="css/header.css">
     <img src="img/doreamon.png" alt="">
-    <a class="navbar-brand" href="#">NCC Car</a>
+    <a class="navbar-brand" href="#">NCC Staff</a>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="">Home</a>
+                <a class="nav-link" href="/">Home</a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="#">Link</a>
+                <a class="nav-link" href="/login">Login</a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="/staff">Staff</a>
             </li>
         </ul>
     </div>
